--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style-css/header-nav.css">
     <link rel="stylesheet" href="style-css/container.css">
     <link rel="stylesheet" href="style-css/card-body.css">
-    <link rel="stylesheet" href="style-css/base.css">
+    <link rel="stylesheet" href="./style-css/base.css">
     <link rel="stylesheet" href="style-css/media-index.css">
     
     <title>4DEV</title>
