--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="style-css/base.css">
     <link rel="stylesheet" href="style-css/header-nav.css">
     <link rel="stylesheet" href="style-css/container.css">
     <link rel="stylesheet" href="style-css/card-body.css">
-    <link rel="stylesheet" href="./style-css/base.css">
     <link rel="stylesheet" href="style-css/media-index.css">
     
     <title>4DEV</title>
