Ajuste de imagens

--- a/assets/card.html
+++ b/assets/card.html
@@ -12,16 +12,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style-css/cards-page.css">
+    <link rel="stylesheet" href="../assets/style-css/cards-page.css">
 
-    <script type="text/JavaScript" src="JavaScript/card.js" defer></script>
+    <script type="text/javaScript" src="../assets/javaScript/card.js" defer></script>
     <title>4DEV</title>
 </head>
 <body>
 
     <div>
         <nav>
-                <a class="home" href="index.html">⇥ Home ⇤</a>
+                <a class="home" href="../index.html">⇥ Home ⇤</a>
         </nav>
     </div>
 
