--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./style-css/base.css">
-    <link rel="stylesheet" href="./style-css/header-nav.css">
-    <link rel="stylesheet" href="./style-css/container.css">
-    <link rel="stylesheet" href="./style-css/card-body.css">
-    <link rel="stylesheet" href="./style-css/media-index.css">
+    <link rel="stylesheet" href="./assets/style-css/base.css">
+    <link rel="stylesheet" href="./assets/style-css/header-nav.css">
+    <link rel="stylesheet" href="./assets/style-css/container.css">
+    <link rel="stylesheet" href="./assets/style-css/card-body.css">
+    <link rel="stylesheet" href="./assets/style-css/media-index.css">
     
     <title>4DEV</title>
 </head>
@@ -40,7 +40,7 @@
 
         <article data_article data_categorie="ciencia">
             <div class="container-img">
-                <img src="./assets/ciencia.jpeg" alt="">
+                <img src="./assets/img/ciencia.jpeg" alt="">
             </div>
             <div class="container-categorie-data">
                 <p class="categorie">Ciência</p>
@@ -61,7 +61,7 @@
 
         <article data_article data_categorie="games">
             <div class="container-img">
-                <img src="./assets/game.jpg" alt="">
+                <img src="./assets/img/game.jpg" alt="">
             </div>
             <div class="container-categorie-data">
                 <p class="categorie">Games</p>
@@ -82,7 +82,7 @@
 
         <article data_article data_categorie="seguranca">
             <div class="container-img">
-                <img src="./assets/seguranca.jpeg" alt="">
+                <img src="./assets/img/seguranca.jpeg" alt="">
             </div>
             <div class="container-categorie-data">
                 <p class="categorie">Segurança</p>
@@ -103,7 +103,7 @@
 
         <article data_article data_categorie="hardware">
             <div class="container-img">
-                <img src="./assets/hardware.png" alt="">
+                <img src="./assets/img/hardware.png" alt="">
             </div>
             <div class="container-categorie-data">
                 <p class="categorie">Hardware</p>
@@ -122,6 +122,6 @@
 
     </section>
 
-    <script type="text/JavaScript" src="JavaScript/index.js"></script>
+    <script type="text/JavaScript" src="./assets/javaScript/index.js"></script>
 </body>
 </html>
