ajuste de caminhos

--- a/assets/card.html
+++ b/assets/card.html
@@ -36,7 +36,7 @@
                 <img src="" alt="" data_img>
             </div>
             <div class="text-container">
-'            <p class="text-card" data_text_card>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            <p class="text-card" data_text_card>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Dolor cum, animi quam a quis odio, dicta perspiciatis rerum recusandae debitis vel.
                 Unde te'mpore at exercitationem sunt amet quod fugiat dolorem!</p>
             </div>
